feat: secure PDF access and expose service details to customers